section one scolling improvment

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
             </div>
         </section>
 
-        <!-- Dienstleistungen Section (50vh, Helles Orange mit Struktur) -->
-        <section id="dienstleistungen" class="parallax short-section orange-light-bg">
-            <div class="symbol">&#128640;</div> <!-- Beispiel: Rakete-Symbol -->
+        <!-- Dienstleistungen Section (50vh, FloralWhite) -->
+        <section id="dienstleistungen" class="parallax short-section floralwhite-bg" style="background-image: url('images/dienstleistungen.jpg');">
             <div class="content">
                 <h2>Unsere Dienstleistungen</h2>
                 <p>Wir bieten eine breite Palette von Dienstleistungen an, die speziell auf die Bedürfnisse unserer Kunden zugeschnitten sind...</p>
@@ -46,7 +45,6 @@
         
         <!-- Referenzen Section (50vh, Gold) -->
         <section id="referenzen" class="parallax short-section gold-bg" style="background-image: url('images/referenzen.jpg');">
-            <div class="symbol">&#128176;</div> <!-- Beispiel: Geld-Symbol -->
             <div class="content">
                 <h2>Unsere Referenzen</h2>
                 <p>Hier sind einige Beispiele für Projekte, die wir erfolgreich abgeschlossen haben...</p>
@@ -76,7 +74,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2024 Dr. Kathrin Schweizer</p>
+        <p>&copy; 2024 Mein Unternehmen</p>
     </footer>
 
     <script src="script.js"></script>
