better phone view

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Mein One-Pager</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -74,7 +75,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2024 Mein Unternehmen</p>
+        <p>&copy; 2024 Dr. Kathrin Schweizer</p>
     </footer>
 
     <script src="script.js"></script>
