--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </button>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#ueber-uns">Über uns</a></li>
+                    <li><a href="#ueber-mich">Über mich</a></li>
                     <li><a href="#dienstleistungen">Dienstleistungen</a></li>
                     <li><a href="#referenzen">Referenzen</a></li>
                     <li><a href="#kontakt">Kontakt</a></li>
@@ -28,11 +28,13 @@
     </header>
     
     <main>
-        <!-- Über uns Section (100vh) -->
-        <section id="ueber-uns" class="parallax" style="background-image: url('images/Passbild.jpg');">
+        <!-- Über mich Section (100vh) -->
+        <section id="ueber-mich" class="parallax" style="background-image: url('images/Passbild.jpg');">
             <div class="content">
-                <h2>Über uns</h2>
-                <p>Wir sind ein engagiertes Team von Fachleuten, das sich leidenschaftlich dafür einsetzt, unseren Kunden den besten Service zu bieten...</p>
+                <h2>Über mich</h2>
+                <p>Mit über einem Jahrzehnt Führungserfahrung in verschiedenen Branchen vereine ich strategisches Vertriebs-Know-how mit einer tiefen Leidenschaft für Coaching 
+                    und Lehre. Mein Ansatz basiert auf der Förderung systemischen Denkens und der Einführung agiler Arbeitsweisen, um Teams und Einzelpersonen dabei zu unterstützen, 
+                    ihr volles Potenzial zu entfalten. Ob im Business, in der Lehre oder in der Führung – ich setze auf Transformation und nachhaltige Wertschöpfung durch innovative und kollaborative Methoden.</p>
             </div>
         </section>
 
