linkedin logo ingerated

--- a/index.html
+++ b/index.html
@@ -30,22 +30,25 @@
     <main>
         <!-- Über mich Section -->
         <section id="ueber-mich" class="parallax section-content">
+            <!-- LinkedIn-Logo im Bild -->
+            <a href="https://www.linkedin.com/in/dein-profil" target="_blank" class="linkedin-logo">
+                <img src="images/linkedin-logo.png" alt="LinkedIn Profil">
+            </a>
             <!-- Bild für die mobile Ansicht -->
             <img src="images/Passbild.jpg" alt="Dr. Kathrin Schweizer" class="mobile-image">
             <div class="content">
                 <h2>Über mich</h2>
                 <p>Mit über einem Jahrzehnt Führungserfahrung in verschiedenen Branchen vereine ich strategisches Vertriebs-Know-how mit einer tiefen Leidenschaft für Coaching 
-                    und Lehre. Mein Ansatz basiert auf der Förderung systemischen Denkens und der Einführung agiler Arbeitsweisen, um Teams und Einzelpersonen dabei zu unterstützen, 
-                    ihr volles Potenzial zu entfalten. Ob im Business, in der Lehre oder in der Führung – ich setze auf Transformation und nachhaltige Wertschöpfung durch innovative und kollaborative Methoden.</p>
+                    und Lehre...</p>
             </div>
         </section>
 
         <!-- Portfolio Section -->
-        <section id="portfolio" class="parallax short-section floralwhite-bg">
+        <section id="portfolio" class="parallax short-section floralwhite-bg fade-in-section">
             <div class="content">
                 <h2>Portfolio</h2>
                 <ul class="bullet-points">
-                    <li>Aufzählungspunkt 1</li>
+                    <li>Aufzählungspunkt 111</li>
                     <li>Aufzählungspunkt 2</li>
                     <li>Aufzählungspunkt 3</li>
                     <li>Aufzählungspunkt 4</li>
@@ -54,7 +57,7 @@
         </section>
         
         <!-- Referenzen Section -->
-        <section id="referenzen" class="parallax short-section floralwhite-bg">
+        <section id="referenzen" class="parallax short-section floralwhite-bg fade-in-section">
             <div class="content">
                 <h2>Referenzen</h2>
                 <p>Hier sind einige Beispiele für Projekte, die wir erfolgreich abgeschlossen haben...</p>
@@ -62,7 +65,7 @@
         </section>
         
         <!-- Kontakt Section -->
-        <section id="kontakt" class="parallax short-section floralwhite-bg">
+        <section id="kontakt" class="parallax short-section floralwhite-bg fade-in-section">
             <div class="content">
                 <h2>Kontakt</h2>
                 <p>Wir freuen uns darauf, von Ihnen zu hören! Wenn Sie Fragen haben oder ein Projekt besprechen möchten...</p>
