linkedin logo ingerated new

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <!-- Über mich Section -->
         <section id="ueber-mich" class="parallax section-content">
             <!-- LinkedIn-Logo im Bild -->
-            <a href="https://www.linkedin.com/in/dein-profil" target="_blank" class="linkedin-logo">
-                <img src="images/linkedin-logo.png" alt="LinkedIn Profil">
+            <a href="https://www.linkedin.com/in/dr-kathrin-schweizer-513982150/" target="_blank" class="linkedin-logo">
+                <img src="images/linkedin-logo2.png" alt="LinkedIn Profil">
             </a>
             <!-- Bild für die mobile Ansicht -->
             <img src="images/Passbild.jpg" alt="Dr. Kathrin Schweizer" class="mobile-image">
