--- a/index.html
+++ b/index.html
@@ -38,16 +38,15 @@
             <img src="images/Passbild.jpg" alt="Dr. Kathrin Schweizer" class="mobile-image">
             <div class="content">
                 <h2>Über mich</h2>
-                <p>Mit über einem Jahrzehnt Führungserfahrung in verschiedenen Branchen vereine ich strategisches Vertriebs-Know-how mit einer tiefen Leidenschaft für Coaching 
-                    und Lehre...</p>
+                <p>Mit über einem Jahrzehnt Führungserfahrung in verschiedenen Branchen vereine ich strategisches Vertriebs-Know-how mit einer tiefen Leidenschaft für Coaching und Lehre...</p>
             </div>
         </section>
-
+        
         <!-- Portfolio Section -->
         <section id="portfolio" class="parallax short-section floralwhite-bg fade-in-section">
             <div class="content">
-                <h2>Portfolio</h2>
-                <ul class="bullet-points">
+                <h2 class="fade-in-text" >Portfolio</h2>
+                <ul class="fade-in-text" class="bullet-points">
                     <li>Aufzählungspunkt 111</li>
                     <li>Aufzählungspunkt 2</li>
                     <li>Aufzählungspunkt 3</li>
@@ -59,8 +58,8 @@
         <!-- Referenzen Section -->
         <section id="referenzen" class="parallax short-section floralwhite-bg fade-in-section">
             <div class="content">
-                <h2>Referenzen</h2>
-                <p>Hier sind einige Beispiele für Projekte, die wir erfolgreich abgeschlossen haben...</p>
+                <h2 class="fade-in-text" >Referenzen</h2>
+                <p class="fade-in-text" >Hier sind einige Beispiele für Projekte, die wir erfolgreich abgeschlossen haben...</p>
             </div>
         </section>
         
